# checklist_api

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  database.db  entrypoint.sh  pyproject.toml
.github/workflows/: pipeline.yml
checklist_api/: database.py  main.py  pyproject.toml  schemas.py  security.py
checklist_api/checklist_api/: database.py  main.py  schemas.py  security.py
checklist_api/migrations/: env.py
checklist_api/routers/: auth.py  todos.py  users.py
checklist_api/tests/: conftest.py  test_app.py  test_db.py
migrations/: env.py
migrations/versions/: bffc49f3d5d5_create_users_table.py  eed4340954ba_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
